<resources>
    <string name="app_name">OpenSRP Client Stock</string>
    <string name="stock_title">Stock Control</string>
    <string name="stock_title_formatted">Stock Control > %1$s</string>
    <string name="section_format">Section: %1$d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_stock_control">StockControlActivity</string>

    <string name="url_separator">/</string>
    <string name="stocks_key">stocks</string>
    <string name="server_version_key">serverVersion</string>
    <string name="transaction_type_key">transaction_type</string>
    <string name="providerid_key">providerid</string>
    <string name="value_key">value</string>
    <string name="date_created_key">date_created</string>
    <string name="to_from_key">to_from</string>
    <string name="lot_id">lotId</string>
    <string name="reason_id">reasonId</string>
    <string name="program_id">programId</string>
    <string name="date_updated_key">date_updated</string>
    <string name="stock_type_id_key">vaccine_type_id</string>
    <string name="negative_balance">New balance cannot be negative.</string>
    <string name="negative_adjustment">Cannot adjust stock by more than stock on hand %1d</string>

    <string name="vials">vials</string>
    <string name="vials_formatted">%1$s vials</string>
    <string name="doses">%1$s doses</string>
    <string name="current_stock">Current Stock</string>
    <string name="stock_planning">Stock Planning</string>
    <string name="stock">%1$s Stock: </string>
    <string name="stock_issued">Stock Issued</string>
    <string name="stock_received">Stock Received</string>
    <string name="stock_loss">Stock Loss/Adjustment</string>
    <string name="received">Received</string>
    <string name="issued">Issued</string>
    <string name="loss_adj">Loss/Adj</string>
    <string name="date">Date</string>
    <string name="to_from">To/From</string>
    <string name="received_plus">Received (+)</string>
    <string name="issued_minus">Issued (-)</string>
    <string name="balance">Balance</string>
    <string name="note_current_control">Note: stock numbers are in vials</string>
    <string name="stock_planning_title">%1$s Planning</string>
    <string name="vaccine_stock_levels">3 month %1$s stock levels</string>
    <string name="vaccine_stock_used">3 month %1$s stock used</string>
    <string name="current_vaccine_stock">Current %1$s stock: </string>
    <string name="active_children">Number of active children</string>
    <string name="active_children_age">Age</string>
    <string name="active_children_last_month">Last Month</string>
    <string name="active_children_this_month">This Month</string>
    <string name="active_children_difference">Difference</string>
    <string name="total">Total</string>
    <string name="vaccine_due_next_month">Due %1$s next month %2$s %3$s: </string>
    <string name="vaccine_due_next_month_text">Calculated from current active children that will be due for %1$s next month.</string>
    <string name="average_vaccine_waste_rate">Average %1$s waste rate: </string>
    <string name="mmr_stock">M/MR Stock: </string>
    <string name="months_0_to_11">0 - 11 months</string>
    <string name="months_12_to_59">12 - 59 months</string>
    <string name="three_month_stock_used">3 month stock used</string>
    <string name="three_month_average">3 month average</string>
    <string name="vials_14">14 vials</string>
    <string name="due_mmr_next_month">Due M/MR next month: </string>
    <string name="average_mmr_waste_rate">Average M/MR waste rate: </string>
    <string name="total_wasted_doses">Total wasted doses: %1$d doses</string>
    <string name="new_vaccine_balance">New %1$s balance: %2$d vials</string>
    <string name="children_vaccinated">Children vaccinated on this date: %1$d</string>
    <string name="estimated_vials_issued">Estimated vials issued on this date: %1$d</string>
    <string name="stock_quantity_error">Vials used cannot be more than vials in stock. Record received stock to proceed.</string>
    <string name="stock_quantity_error_doses">Doses used cannot be more than doses in stock. Record received stock to proceed.</string>
    <string name="note_current_control_doses">Note: stock numbers are in doses</string>
    <string name="doses_unformatted">doses</string>
    <string name="new_vaccine_balance_doses">New %1$s balance: %2$d doses</string>
    <string name="estimated_doses_issued">Estimated doses issued on this date: %1$d</string>
    <string name="doses_wasted_note_doses">Unused doses in issued doses + wasted doses</string>

</resources>
