<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".fragment.CurrentStock">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/name"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mmr_stock"
                android:textColor="@android:color/black"
                android:textSize="@dimen/bottom_text_size" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/vials"
                style="@style/CustomFontTextViewStyle.ClientList.NoPadding"
                fontVariant="light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vials_14"
                android:textColor="@color/bluetext"
                android:textSize="@dimen/bottom_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/received"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_gradient"
                android:drawableLeft="@drawable/stock_plus"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text=" @string/received"
                android:textAllCaps="false"
                android:textAppearance="@style/CustomFontTextViewStyle.ListView.Medium.NoPadding"
                android:textColor="#767676"
                android:textSize="18sp" />

            <Button
                android:id="@+id/issued"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_gradient"
                android:drawableLeft="@drawable/stock_minus"
                android:paddingStart="20dp"
                android:paddingLeft="30dp"
                android:paddingEnd="20dp"
                android:paddingRight="30dp"
                android:text="@string/issued"
                android:textAllCaps="false"
                android:textAppearance="@style/CustomFontTextViewStyle.ListView.Medium.NoPadding"
                android:textColor="#767676"
                android:textSize="18sp" />

            <Button
                android:id="@+id/loss_adj"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_gradient"
                android:drawableLeft="@drawable/stock_list"
                android:paddingStart="20dp"
                android:paddingLeft="30dp"
                android:paddingEnd="20dp"
                android:paddingRight="30dp"
                android:text="@string/loss_adj"
                android:textAllCaps="false"
                android:textAppearance="@style/CustomFontTextViewStyle.ListView.Medium.NoPadding"
                android:textColor="#767676"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/smart_register_client_divider_height"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:src="@color/smart_register_client_divider_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="13">

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/datelabel"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="2.5"
                android:text="@string/date"
                android:textColor="@color/dim_foreground_material_light"
                android:textSize="18sp" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/to_fromlabel"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="2"
                android:text="@string/to_from"
                android:textColor="@color/dim_foreground_material_light"
                android:textSize="18sp" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/receivedlabel"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="2.5"
                android:text="@string/received_plus"
                android:textColor="@color/dim_foreground_material_light"
                android:textSize="18sp" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/issuedlabel"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="2"
                android:text="@string/issued_minus"
                android:textColor="@color/dim_foreground_material_light"
                android:textSize="18sp" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/loss_adjlabel"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="2.25"
                android:text="@string/loss_adj"
                android:textColor="@color/dim_foreground_material_light"
                android:textSize="18sp" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/balancelabel"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1.76"
                android:gravity="right"
                android:text="@string/balance"
                android:textColor="@color/dim_foreground_material_light"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/smart_register_client_divider_height"
            android:layout_marginTop="10dp"
            android:src="@color/smart_register_client_divider_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/child_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/listview_background_rounded"
                    android:paddingBottom="10dp">

                    <ProgressBar
                        android:id="@+id/client_list_progress"
                        style="@android:style/Widget.Holo.Light.ProgressBar.Large.Inverse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="visible" />

                    <ListView
                        android:id="@+id/list"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|top"
                        android:divider="@color/smart_register_client_divider_color"
                        android:dividerHeight="@dimen/smart_register_client_divider_height"
                        android:visibility="invisible" />

                </FrameLayout>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
